tests/cases/generics/ok/generic-aggregate-recursive-pointer.ari
struct Node[T] {
  payload: T,
  child: ptr Node[T],
}

fn main() -> i64 {
  return 0;
}
