tests/cases/generics/errors/generic-duplicate-param.ari
fn same[T, T](value: T) -> T {
  return value;
}

fn main() -> i64 {
  return same(1);
}
